# entregaModulo10

./: .env  .gitignore  README.md  docker-compose.yaml  pyproject.toml
data/: summaries.json
qdrant_config/: config.yaml
qdrant_data/: raft_state.json
qdrant_data/collections/langchain_index_bge/: config.json
qdrant_data/collections/langchain_index_bge/0/: newest_clocks.json  replica_state.json
qdrant_data/collections/langchain_index_bge/0/segments/0cd703dc-c89d-4fee-b144-db22887ed261/: mutable_id_tracker.mappings
qdrant_data/collections/langchain_index_bge/0/segments/0cd703dc-c89d-4fee-b144-db22887ed261/payload_index/: IDENTITY  LOG  MANIFEST-000005  MANIFEST-000009
qdrant_data/collections/langchain_index_bge/0/segments/1277846a-c760-4cf3-9c9b-da036fc1a759/: mutable_id_tracker.mappings
qdrant_data/collections/langchain_index_bge/0/segments/77e8a2b1-7ff5-4bb4-ab8a-d102fa1a0ae2/: mutable_id_tracker.mappings
qdrant_data/collections/langchain_index_bge/0/segments/98d4eed0-43c1-4e0f-ae0b-13d749b1801f/: mutable_id_tracker.mappings
qdrant_data/collections/langchain_index_bge/0/segments/c4f89d73-4528-48ef-9474-22374c420b6a/: mutable_id_tracker.mappings
qdrant_data/collections/langchain_index_bge/0/segments/fa5bdd75-e35f-4096-ab6d-67f1cc487f71/: mutable_id_tracker.mappings
scripts/: langchain_index.py  preprocessing.py  routing_generation.py
src/: app.py  main.py
src/api/: router_langchain.py  schema.py
src/process_langchain/: __init__.py  chain.py  prompts.py  structures.py
src/services/: embeddings.py  llms.py  vector_store.py
(+28 files in other folders)
